--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,8 +1,3 @@
-@import "base/normalize";
-
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
+.hello-world {
+  color: red;
 }
